--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -37,21 +37,35 @@ section  #Professeur, #Projet, #Professeur, #Stage, #Evenement, #Programme{
   opacity: 0;
 }
 
-.bgBlue{
-  opacity: 0;
+// .bgBlue{
+//   opacity: 0;
+//   transform: translateY(0px);
+//   animation: sectionTransitionFade 2s forwards!important;
+// }
+
+#Programme.bgBlue{
   transform: translateY(0px);
   animation: sectionTransitionFade 2s forwards!important;
 }
 
+#Professeur.bgBlue{
+  transform: translateX(-80px);
+  animation: sectionTransitionX 2s forwards!important;
+}
+
+#Projet.bgBlue{
+  transform: translateY(0px);
+  animation: sectionTransitionFade 2s forwards!important;
+}
 
 #Stage.bgBlue{
-  transform: translateX(80px);
+  transform: translateX(100px);
   animation: sectionTransitionX 2s forwards!important;
 }
 
 #Evenement.bgBlue{
-  transform: translateX(-80px);
-  animation: sectionTransitionX 2s forwards!important;
+  transform: translateY(0px);
+  animation: sectionTransitionFade 2s forwards!important;
 }
 
 @keyframes sectionTransitionFade {
